perfect-scrollbar styles fix

--- a/src/components/kit-vendors/perfect-scrollbar/style.scss
+++ b/src/components/kit-vendors/perfect-scrollbar/style.scss
@@ -13,11 +13,6 @@
   background: #c5cdd2 !important;
 }
 
-perfect-scrollbar > .ps.ps--scrolling-y > .ps__rail-y,
-perfect-scrollbar > .ps.ps--scrolling-x > .ps__rail-x {
-  background: none !important;
-}
-
 .ps .ps__rail-x:hover,
 .ps .ps__rail-y:hover,
 .ps .ps__rail-x:focus,
@@ -25,11 +20,6 @@ perfect-scrollbar > .ps.ps--scrolling-x > .ps__rail-x {
 .ps .ps__rail-x.ps--clicking,
 .ps .ps__rail-y.ps--clicking {
   background: none !important;
-}
-
-perfect-scrollbar > .ps.ps--active-y > .ps__rail-y:hover,
-perfect-scrollbar > .ps.ps--active-y > .ps__rail-y.ps--clicking {
-  width: 10px !important;
 }
 
 .ps__rail-y:hover > .ps__thumb-y,
@@ -46,11 +36,6 @@ perfect-scrollbar > .ps.ps--active-y > .ps__rail-y.ps--clicking {
 
 .ps-content {
   height: 100%;
-}
-
-perfect-scrollbar > .ps.ps--active-x > .ps__rail-x:hover,
-perfect-scrollbar > .ps.ps--active-x > .ps__rail-x.ps--clicking {
-  height: 10px !important;
 }
 
 // dark theme
